@@ -1,3 +1,5 @@
+import com.android.build.gradle.internal.api.BaseVariantOutputImpl
+import io.gitlab.arturbosch.detekt.Detekt
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 import org.jetbrains.kotlin.compose.compiler.gradle.ComposeFeatureFlag
@@ -34,6 +36,8 @@ val keystoreProperties by lazy {
     keystoreProperties
 }
 
+val locales = listOf("en", "ar", "ca", "cs", "de", "el", "es", "fr", "it", "nl", "pl", "pt", "ru")
+
 android {
     namespace = "to.bitkit"
     compileSdk = 35
@@ -49,6 +53,7 @@ android {
         }
         buildConfigField("boolean", "E2E", System.getenv("E2E")?.toBoolean()?.toString() ?: "false")
         buildConfigField("boolean", "GEO", System.getenv("GEO")?.toBoolean()?.toString() ?: "true")
+        buildConfigField("String", "LOCALES", "\"${locales.joinToString(",")}\"")
     }
 
     flavorDimensions += "network"
@@ -131,7 +136,7 @@ android {
     }
     androidResources {
         @Suppress("UnstableApiUsage")
-        localeFilters.addAll(listOf("en", "ar", "ca", "cs", "de", "el", "es", "fr", "it", "nl", "pl", "pt", "ru"))
+        localeFilters.addAll(locales)
         @Suppress("UnstableApiUsage")
         generateLocaleConfig = true
     }
@@ -153,7 +158,7 @@ android {
     applicationVariants.all {
         val variant = this
         outputs
-            .map { it as com.android.build.gradle.internal.api.BaseVariantOutputImpl }
+            .map { it as BaseVariantOutputImpl }
             .forEach { output ->
                 val apkName = "bitkit-android-${defaultConfig.versionCode}-${variant.name}.apk"
                 output.outputFileName = apkName
@@ -167,17 +172,6 @@ composeCompiler {
         ComposeFeatureFlag.OptimizeNonSkippingGroups,
     )
     reportsDestination = layout.buildDirectory.dir("compose_compiler")
-}
-
-tasks.withType<io.gitlab.arturbosch.detekt.Detekt>().configureEach {
-    ignoreFailures = true
-    reports {
-        html.required.set(true)
-        sarif.required.set(true)
-        md.required.set(false)
-        txt.required.set(false)
-        xml.required.set(false)
-    }
 }
 
 dependencies {
@@ -281,6 +275,19 @@ room {
     schemaDirectory("$projectDir/schemas")
 }
 
+// region Tasks
+
+tasks.withType<Detekt>().configureEach {
+    ignoreFailures = true
+    reports {
+        html.required.set(true)
+        sarif.required.set(true)
+        md.required.set(false)
+        txt.required.set(false)
+        xml.required.set(false)
+    }
+}
+
 tasks.withType<Test> {
     testLogging {
         events(
@@ -297,3 +304,12 @@ tasks.withType<Test> {
         showStackTraces = true
     }
 }
+
+// JDK 21+ prints warnings when ByteBuddy loads a dynamic Java agent during tests.
+// Our test stack triggers this automatically.
+// Explicitly enabling dynamic agent loading silences the warning without altering behavior.
+tasks.withType<Test>().configureEach {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+}
+
+// endregion
